--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -65,3 +65,6 @@ FOREIGN_TRANSACTIONS_FEE=0.001
 #for bridge native_to_erc, erc_to_erc mode
 DEPLOY_REWARDABLE_TOKEN=false
 DPOS_STAKING_ADDRESS=
+
+#If decimals are different between foreign and home chain, number of decimals shift required to adjust the amount of tokens bridged. Default value is 0.
+FOREIGN_TO_HOME_DECIMAL_SHIFT=
